[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/elementUI/elementProperties.gd" type="Script" id=1]
[ext_resource path="res://scenes/elementUI/morph_data.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFontData" id=39]
font_path = "res://assets/fonts/noto_sans_ui_bold.ttf"

[sub_resource type="DynamicFont" id=35]
use_filter = true
font_data = SubResource( 39 )

[sub_resource type="DynamicFont" id=42]
size = 12
use_filter = true
font_data = SubResource( 39 )

[sub_resource type="DynamicFontData" id=40]
font_path = "res://assets/fonts/Roboto-Black.ttf"

[sub_resource type="DynamicFont" id=38]
size = 14
use_filter = true
font_data = SubResource( 40 )

[sub_resource type="DynamicFontData" id=41]
font_path = "res://assets/fonts/noto_sans_ui_bold.ttf"

[sub_resource type="DynamicFont" id=37]
size = 13
use_filter = true
font_data = SubResource( 41 )

[node name="ElementProperties" type="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="content" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 595.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="MarginContainer/ScrollContainer/content"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 35 )
text = "ADD VARIABLE"
valign = 1
autowrap = true
uppercase = true

[node name="doc" type="Label" parent="MarginContainer/ScrollContainer/content"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.427451, 1, 0.745098, 1 )
custom_fonts/font = SubResource( 42 )
text = "Doc Example"
valign = 1
autowrap = true

[node name="OutputVar" type="HFlowContainer" parent="MarginContainer/ScrollContainer/content"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 2

[node name="lable" type="Label" parent="MarginContainer/ScrollContainer/content/OutputVar"]
unique_name_in_owner = true
margin_right = 57.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_colors/font_color = Color( 0.564706, 0.454902, 1, 1 )
custom_fonts/font = SubResource( 38 )
text = "Output > "
valign = 1

[node name="flowVariables" type="LineEdit" parent="MarginContainer/ScrollContainer/content/OutputVar"]
unique_name_in_owner = true
visible = false
margin_left = 59.0
margin_right = 139.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 37 )
text = "var"
align = 1
editable = false
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5

[node name="parameter" type="VBoxContainer" parent="MarginContainer/ScrollContainer/content"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 405.0
size_flags_horizontal = 3

[node name="morph_data" parent="MarginContainer/ScrollContainer/content/parameter" instance=ExtResource( 3 )]
margin_bottom = 321.0
